RESOLVED FIXED133656
[Mac][MSE] Exception thrown from ~MediaPlayerPrivateMediaSourceAVFObjC().
https://bugs.webkit.org/show_bug.cgi?id=133656
Summary [Mac][MSE] Exception thrown from ~MediaPlayerPrivateMediaSourceAVFObjC().
Jer Noble
Reported 2014-06-09 13:33:04 PDT
[Mac][MSE] Exception thrown from ~MediaPlayerPrivateMediaSourceAVFObjC().
Attachments
Patch (2.17 KB, patch)
2014-06-09 13:36 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2014-06-09 13:36:49 PDT
WebKit Commit Bot
Comment 2 2014-06-09 14:32:46 PDT
Comment on attachment 232730 [details] Patch Clearing flags on attachment: 232730 Committed r169718: <http://trac.webkit.org/changeset/169718>
WebKit Commit Bot
Comment 3 2014-06-09 14:32:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.