[Mac][MSE] Exception thrown from ~MediaPlayerPrivateMediaSourceAVFObjC(). https://bugs.webkit.org/show_bug.cgi?id=133656

Reviewed by Eric Carlson.

AVSampleBufferRenderSynchronizer can't handle being passed a NULL observer, so only attempt
to remove the time jumped or duration observer if one was actually created.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::~MediaPlayerPrivateMediaSourceAVFObjC):


Canonical link: https://commits.webkit.org/151632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169718 268f45cc-cd09-0410-ab3c-d52691b4dbfc